--- a/index.html
+++ b/index.html
@@ -16,30 +16,33 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity=""
         crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <!-- MDB core JavaScript -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 
 <body class="bg-dark codingBackground">
     <header class="pageBar">
         <div class="d-flex justify-content-center">
-            <h1 class="py-1">Johnny Li</h1>
+            <h1 class="py-1 prettyFont">Johnny Li</h1>
         </div>
     </header>
     <nav class="nav pageBar font-weight-bold justify-content-center">
-        <a class="nav-link " href="about.html">About Me</a>
-        <a class="nav-link " href="index.html">Portfolio</a>
+        <a class="nav-link prettyFont" href="about.html">About Me</a>
+        <a class="nav-link prettyFont" href="index.html">Portfolio</a>
     </nav>
     <main class="container">
         <article class="card mt-4 mainCard">
             <div class="card-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class=" card-title">Portfolio</h2>
+                        <h2 class="prettyFont card-title">Portfolio</h2>
                         <hr>
                     </div>
                 </div>
@@ -48,8 +51,8 @@
                         <div class="container">
                             <div class="row">
 
-                                <div class=" col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard animated fadeIn" style="transform: rotate(0)">
+                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard " style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Covid - Can I do it?</h3>
                                             <h6 class="card-subtitle ">Risk Assessment App</h6>
@@ -61,14 +64,16 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body miniCard card-bottom-radius animated fadeIn" style="transform: rotate(0)"><a
+                                    <div class="card-body miniCard card-bottom-radius wow fadeInUp"
+                                        style="transform: rotate(0)"><a
                                             href="https://github.com/covidcanidoit/covidcanidoit"
                                             class=" stretched-link"><i
-                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
                                 </div>
 
-                                <div class=" col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard delay-1s animated fadeIn" style="transform: rotate(0)">
+                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Purple Pages</h3>
                                             <h6 class="card-subtitle ">Web Entertainment App</h6>
@@ -81,14 +86,14 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard delay-1s animated fadeIn" style="transform: rotate(0)"><a
-                                            href="https://github.com/reptile18/Purple-Pages"
-                                            class=" stretched-link"><i
-                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Purple-Pages" class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
                                 </div>
 
-                                <div class="col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard delay-2s animated fadeIn" style="transform: rotate(0)">
+                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Work Day Scheduler</h3>
                                             <h6 class="card-subtitle ">Time Keeping App</h6>
@@ -101,14 +106,15 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard delay-2s animated fadeIn" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Work-Day-Scheduler"
                                             class=" stretched-link"><i
-                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
                                 </div>
 
-                                <div class="col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard delay-3s animated fadeIn" style="transform: rotate(0)">
+                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
                                             <h6 class="card-subtitle ">Local Weather App</h6>
@@ -120,10 +126,11 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard delay-3s animated fadeIn" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Weather-Dashboard"
                                             class=" stretched-link"><i
-                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
                                 </div>
                                 <div class="my-5">.</div>
                             </div>
@@ -159,6 +166,11 @@
         </div>
         <div class="footer-copyright text-center py-3">© Copyright</div>
     </footer>
+    <script type="text/JavaScript">
+$(document).ready(function () {
+    new WOW().init();
+});
+    </script>
 </body>
 
 </html>
