fix halves of Covid card fading up individually

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body miniCard card-bottom-radius wow fadeInUp"
+                                    <div class="card-body miniCard card-bottom-radius"
                                         style="transform: rotate(0)"><a
                                             href="https://github.com/covidcanidoit/covidcanidoit"
                                             class=" stretched-link"><i
