--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@ $(document).ready(function () {
 
 new WOW().init();
 
-var skills = [
+const skills = [
     {
         skill: "HTML5",
         level: 5,
@@ -288,7 +288,7 @@ function populateSkills() {
     
     skillTimer = setInterval(() => {
         skillIndex++;
-        if (skillIndex >= skills.length) clearInterval(skillTimer);
+        if (skillIndex >= skills.length-1) clearInterval(skillTimer);
         let value = skills[skillIndex];
         let spanSkill = $("#" + value.id).removeClass("invisible").addClass(" animated fadeIn");
 
