different behavior on mobile vs desktop wrt animations

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                                     <div id="skillsSection" class="card-body miniCard card-bottom-radius ">
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-250ms col-lg-6 mb-5">
                                     <div class="card-top-radius miniCard ">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Strengths</h3>
@@ -77,22 +77,22 @@
                                     </div>
                                     <div id="statsSection" class="card-body miniCard card-bottom-radius">
                                         <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns
+                                            <li class="py-2 wow fadeInUp delay-500ms"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns
                                                     quickly</span></li>
-                                            <li class="py-2"><i class="fas fa-users fa-2x"></i><span class="px-3">team
+                                            <li class="py-2 wow fadeInUp delay-750ms"><i class="fas fa-users fa-2x"></i><span class="px-3">team
                                                     player</span></li>
-                                            <li class="py-2"><i class="fas fa-code-branch fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1000ms"><i class="fas fa-code-branch fa-2x"></i><span
                                                     class="px-3">incredibly driven</span></li>
-                                            <li class="py-2"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert
+                                            <li class="py-2 wow fadeInUp delay-1250ms"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert
                                                     bug investigator & fixer</span></li>
-                                            <li class="py-2"><i class="fas fa-globe fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1500ms"><i class="fas fa-globe fa-2x"></i><span
                                                     class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-briefcase fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1750ms"><i class="fas fa-briefcase fa-2x"></i><span
                                                     class="px-3">doesn't give up until everything looks good</span></li>
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-500ms col-lg-6 mb-5">
                                     <div class="card-top-radius miniCard">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Personality</h3>
@@ -105,20 +105,20 @@
                                     </div>
                                     <div id="bitsSection" class="card-body miniCard card-bottom-radius">
                                         <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span
+                                            <li class="py-2 wow fadeInUp delay-750ms"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span
                                                         class="text-success font-weight-bold">G</span>BT</span></li>
-                                            <li class="py-2"><i class="fas fa-leaf fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1000ms"><i class="fas fa-leaf fa-2x"></i><span
                                                     class="px-3">longtime vegan</span></li>
-                                            <li class="py-2"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat
+                                            <li class="py-2 wow fadeInUp delay-1250ms"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat
                                                     <span class="badge badge-light">2</span> herder</span></li>
-                                            <li class="py-2"><i class="fas fa-running fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1500ms"><i class="fas fa-running fa-2x"></i><span
                                                     class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-dice-five fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1750ms"><i class="fas fa-dice-five fa-2x"></i><span
                                                     class="px-3">board game fanatic</span></li>
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-750ms col-lg-6 mb-5">
                                     <div class="card-top-radius miniCard ">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Contact</h3>
