--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-250ms col-lg-4 mb-5">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Purple Pages</h3>
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-500ms col-lg-4 mb-5">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Work Day Scheduler</h3>
@@ -113,7 +113,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-750ms col-lg-4 mb-5">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
