fix vertical align on 'bullets', remove delay on personality, delete extra jquery

--- a/about.html
+++ b/about.html
@@ -4,9 +4,6 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -77,18 +74,18 @@
                                     </div>
                                     <div id="statsSection" class="card-body miniCard card-bottom-radius">
                                         <ul class="no-bullets">
-                                            <li class="py-2 wow fadeInUp delay-500ms"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns
+                                            <li class="py-2 wow fadeInUp delay-500ms"><i class="fas fa-bolt "></i><span class="px-3">learns
                                                     quickly</span></li>
-                                            <li class="py-2 wow fadeInUp delay-750ms"><i class="fas fa-users fa-2x"></i><span class="px-3">team
+                                            <li class="py-2 wow fadeInUp delay-750ms"><i class="fas fa-users "></i><span class="px-3">team
                                                     player</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1000ms"><i class="fas fa-code-branch fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1000ms"><i class="fas fa-code-branch "></i><span
                                                     class="px-3">incredibly driven</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1250ms"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert
+                                            <li class="py-2 wow fadeInUp delay-1250ms"><i class="fas fa-bug "></i><span class="px-3">expert
                                                     bug investigator & fixer</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1500ms"><i class="fas fa-globe fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp delay-1500ms"><i class="fas fa-globe "></i><span
                                                     class="px-3">extremely flexible</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1750ms"><i class="fas fa-briefcase fa-2x"></i><span
-                                                    class="px-3">doesn't give up until everything looks good</span></li>
+                                            <li class="py-2 wow fadeInUp delay-1750ms"><i class="fas fa-briefcase "></i><span
+                                                    class="px-3">doesn't give up</span></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -105,15 +102,15 @@
                                     </div>
                                     <div id="bitsSection" class="card-body miniCard card-bottom-radius">
                                         <ul class="no-bullets">
-                                            <li class="py-2 wow fadeInUp delay-750ms"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span
+                                            <li class="py-2 wow fadeInUp "><i class="fas fa-heart "></i><span class="px-3">L<span
                                                         class="text-success font-weight-bold">G</span>BT</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1000ms"><i class="fas fa-leaf fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp "><i class="fas fa-leaf "></i><span
                                                     class="px-3">longtime vegan</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1250ms"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat
+                                            <li class="py-2 wow fadeInUp "><i class="fas fa-cat "></i><span class="px-3">cat
                                                     <span class="badge badge-light">2</span> herder</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1500ms"><i class="fas fa-running fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp "><i class="fas fa-running "></i><span
                                                     class="px-3">extremely flexible</span></li>
-                                            <li class="py-2 wow fadeInUp delay-1750ms"><i class="fas fa-dice-five fa-2x"></i><span
+                                            <li class="py-2 wow fadeInUp "><i class="fas fa-dice-five "></i><span
                                                     class="px-3">board game fanatic</span></li>
                                         </ul>
                                     </div>
@@ -128,7 +125,7 @@
                                             <img src="Assets/Images/portrait.jpg" class="card-img-top" alt="screenshot">
                                         </div>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius ">
+                                    <div id="contactSection" class="card-body miniCard card-bottom-radius ">
                                         <div class="mt-3 ">
                                             <ul class="nav">
                                                 <li class="nav-item">
