--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                                             <h6 class="card-subtitle ">My knowledge</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/rainbowbrain.png" class="card-img-top "
+                                            <img src="Assets/Images/rainbowbrain.png" class="about-card card-img-top "
                                                 alt="screenshot">
                                         </div>
                                     </div>
@@ -68,7 +68,7 @@
                                             <h6 class="card-subtitle ">My stats</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/kennyonlaptop.png" class="card-img-top"
+                                            <img src="Assets/Images/kennyonlaptop.png" class="about-card card-img-top"
                                                 alt="screenshot">
                                         </div>
                                     </div>
@@ -96,7 +96,7 @@
                                             <h6 class="card-subtitle ">What makes me special</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/portrait2.jpg" class="card-img-top"
+                                            <img src="Assets/Images/portrait2.jpg" class="about-card card-img-top"
                                                 alt="screenshot">
                                         </div>
                                     </div>
@@ -122,7 +122,7 @@
                                             <h6 class="card-subtitle ">How to get in touch with me</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/portrait.jpg" class="card-img-top" alt="screenshot">
+                                            <img src="Assets/Images/portrait.jpg" class="about-card card-img-top" alt="screenshot">
                                         </div>
                                     </div>
                                     <div id="contactSection" class="card-body miniCard card-bottom-radius ">
