--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="container">
                             <div class="row">
 
-                                <div class="wow fadeInUp col-lg-4 mb-5">
+                                <div class="wow fadeInUp col-lg-4 mb-4">
                                     <div class="card-top-radius miniCard " style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Covid - Can I do it?</h3>
@@ -61,7 +61,7 @@
                                         </div>
                                         <a href="https://covidcanidoit.com/" class="stretched-link">
                                             <div class="card-img-container d-flex justify-content-center ">
-                                                <img src="Assets/Images/covidcanidoit.png" class="card-img-top"
+                                                <img src="Assets/Images/covidcanidoit.png" class="portfolio-card card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-250ms col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-250ms col-lg-4 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Purple Pages</h3>
@@ -83,7 +83,7 @@
                                         <a href="https://reptile18.github.io/Purple-Pages/index.html"
                                             class="stretched-link">
                                             <div class="card-img-container d-flex justify-content-center ">
-                                                <img src="Assets/Images/purplepages.png" class="card-img-top"
+                                                <img src="Assets/Images/purplepages_sq.png" class="portfolio-card card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
@@ -94,7 +94,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-500ms col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-500ms col-lg-4 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Work Day Scheduler</h3>
@@ -103,7 +103,7 @@
                                         <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
                                             class="stretched-link">
                                             <div class="card-img-container d-flex justify-content-center ">
-                                                <img src="Assets/Images/workdayscheduler.png" class="card-img-top"
+                                                <img src="Assets/Images/workdayscheduler.png" class="portfolio-card card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-750ms col-lg-4 mb-5">
+                                <div class="wow fadeInUp delay-750ms col-lg-4 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
@@ -123,7 +123,7 @@
                                         </div>
                                         <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
                                             <div class="card-img-container d-flex justify-content-center ">
-                                                <img src="Assets/Images/weatherdashboard.png" class="card-img-top"
+                                                <img src="Assets/Images/weatherdashboard.png" class="portfolio-card card-img-top"
                                                     alt="screenshot">
                                             </div>
                                         </a>
