--- a/about.html
+++ b/about.html
@@ -39,16 +39,16 @@
         <article class="card mt-4 mainCard">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xl-12">
                         <h2 class="prettyFont card-title">About Me</h2>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xl-12">
                         <div class="container">
                             <div class="row">
-                                <div class=" wow fadeInUp col-lg-6 mb-5">
+                                <div class=" wow fadeInUp col-xl-6 mb-5">
                                     <div class="card-top-radius miniCard">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Skills</h3>
@@ -62,7 +62,7 @@
                                     <div id="skillsSection" class="card-body miniCard card-bottom-radius ">
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp delay-250ms col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-250ms col-xl-6 mb-5">
                                     <div class="card-top-radius miniCard ">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Strengths</h3>
@@ -90,7 +90,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp delay-500ms col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-500ms col-xl-6 mb-5">
                                     <div class="card-top-radius miniCard">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Personality</h3>
@@ -116,7 +116,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="wow fadeInUp delay-750ms col-lg-6 mb-5">
+                                <div class="wow fadeInUp delay-750ms col-xl-6 mb-5">
                                     <div class="card-top-radius miniCard ">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Contact</h3>
