--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <article class="card mt-4 mainCard">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xl-12">
                         <h2 class="prettyFont card-title">Portfolio</h2>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xl-12">
                         <div class="container">
                             <div class="row">
 
-                                <div class="wow fadeInUp col-lg-4 mb-4">
+                                <div class="wow fadeInUp col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard " style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Covid - Can I do it?</h3>
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-250ms col-lg-4 mb-4">
+                                <div class="wow fadeInUp delay-250ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Purple Pages</h3>
@@ -94,7 +94,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-500ms col-lg-4 mb-4">
+                                <div class="wow fadeInUp delay-500ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Work Day Scheduler</h3>
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-750ms col-lg-4 mb-4">
+                                <div class="wow fadeInUp delay-750ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
