add animation to contact details

--- a/about.html
+++ b/about.html
@@ -129,17 +129,17 @@
                                     <div id="contactSection" class="card-body miniCard card-bottom-radius ">
                                         <div class="mt-3 ">
                                             <ul class="nav">
-                                                <li class="nav-item">
+                                                <li class="wow fadeInUp slideInRight nav-item">
                                                     <a href="./Assets/Files/Resume.web.pdf" class="nav-link"><i
                                                             class="fas fa-file "></i> View my
                                                         resume</a>
                                                 </li>
-                                                <li class="nav-item">
+                                                <li class="wow fadeInUp slideInRight nav-item">
                                                     <a href="mailto:reptile18@gmail.com" class="nav-link"><i
                                                             class="fas fa-envelope "></i> Email
                                                         Me</a>
                                                 </li>
-                                                <li class="nav-item">
+                                                <li class="wow fadeInUp slideInRight nav-item">
                                                     <a href="tel:619-564-1623" class="nav-link"><i
                                                             class="fas fa-phone "></i> Call
                                                         Me</a>
