add employee manager and start burger, but commented out

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
 
-                                <div class="wow fadeInUp delay-750ms col-xl-4 col-lg-6 mb-4">
+                                <div class="animated fadeInUp delay-750ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
@@ -134,9 +134,47 @@
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
                                     </div>
                                 </div>
-                                <div class="my-5">.</div>
+                                <div class="animated fadeInUp delay-1000ms col-xl-4 col-lg-6 mb-4">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Employee Tracker</h3>
+                                            <h6 class="card-subtitle ">Node MySQL Employee Tracker</h6>
+                                        </div>
+                                        <a href="https://github.com/reptile18/Employee-Tracker" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/employeemanager.png" class="portfolio-card card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/Employee-Tracker"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
+                                </div>  
+                                <!--<div class="animated fadeInUp delay-1000ms col-xl-4 col-lg-6 mb-4">
+                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Burger</h3>
+                                            <h6 class="card-subtitle ">Full Stack Burger App</h6>
+                                        </div>
+                                        <a href="https://obscure-forest-63608.herokuapp.com/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/burger.png" class="portfolio-card card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                            href="https://github.com/reptile18/burger"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
+                                </div>-->
                             </div>
                         </div>
+                        <div style="height: 10em;">.</div>
                     </div>
                 </div>
             </div>
