--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
                                     </div>
                                 </div>  
-                                <!--<div class="animated fadeInUp delay-1000ms col-xl-4 col-lg-6 mb-4">
+                                <div class="animated fadeInUp delay-1000ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Burger</h3>
@@ -171,7 +171,7 @@
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
                                     </div>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                         <div style="height: 10em;">.</div>
