--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <!-- OG tags -->
     <meta property="og:title" content="Johnny's Portfolio">
     <meta property="og:description" content="Showcase of some of my best work and contributions">
-    <meta property="og:image" content="/images/portfoliopreview.png">
+    <meta property="og:image" content="https://reptile18.github.io/Responsive-Portfolio/images/portfoliopreview.png">
     <meta property="og:url" content="https://reptile18.github.io/Responsive-Portfolio/">
+    <meta property="og:type" content="website">
     <!--JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
